<resources>
    <string name="app_name">Guide Game</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">SITTHICHOK SANRUM</string>
    <string name="title">Title</string>
    <string name="about_text">About</string>
    <string name="rank_text">RANK</string>
    <string name="title_activity_ranking_fragment">rankingFragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="share">Share</string>
    <string name="new_account">ผู้เล่นใหม่</string>
    <string name="hero">ตัวละคร</string>
    <string name="item">การออกไอเท็ม</string>
    <string name="new_people">พื้นฐาน ROV เบื้องต้น</string>
    <string name="skill_text">สกิลติดตัว</string>
    <string name="skill_data_text">การโจมตีปกติจะได้รับ 1 ความกระหาย ซึ่งหากสะสมเต็ม Omen จะวิ่งเร็วขึ้น 60 และโจมตีเร็วขึ้น 25% เป็นเวลา 5 วิ จากนั้นจากโจมตีปกติจะสร้าง ความเสียหายจริง 60 พร้อมลดคูลดาวน์ให้สกิล 1 และ 2 ครั้งละ 1 วิ มีโอกาสที่ Omen จะโจมตีทีเดียว 2 ครั้ง โดยครั้งที่ 2 จะเบาลง 50%</string>
    <string name="fanpage_tvbutton">FANPAGE</string>
    <string name="input_tv">ต้องการซื้อฮีโร่กี่ตัว</string>
    <string name="bt_kid">คำนวณ</string>
    <string name="tv_duscount">ส่วนลด 10 %</string>
    <string name="tv_pray">รวมที่ต้องจ่าย</string>
    <string name="tv_bath">บาท</string>
    <string name="tv_title">เกม RoV คืออะไร? ก่อนอื่นขอเกริ่นก่อนว่าเกมอาโอวีคือเกมอะไร? ทำไมมันถึงได้รับความนิยม จริง ๆ เราเขียนบทความลงลึกอธิบายเกี่ยวกับหัวข้อนี้โดยละเอียดแล้ว แนะนำให้ไปอ่านก่อนจะได้เข้าใจเนื้อหาและการเล่น RoV เบื้องต้น</string>
    <string name="tv_title2">ถ้าให้สรุปสั้น ๆ เกมอาโอวีคือเกมแนว Moba ที่เล่นบนมือถือเท่านั้น มันมีรูปแบบการเล่นแบบ 5 ต่อ 5 ในแต่ละแมทช์ ผู้เล่นแต่คนจะเลือกฮีโร่มา 1 ตัว และช่วยกันเพื่อทำลายฐานศัตรู ทีมไหนทำลายฐานหลักอีกฝ่ายได้ก่อนชนะ</string>
    <string name="tv_title3">ทำไมต้องอ่านคู่มือ RoV?</string>
    <string name="tv_title4">ถึงแม้ในตัวเกมจะมีการสอนเล่นก่อนเริ่มเล่นกับคนจริง ๆ แต่ส่วนที่เกมสอนตอนเริ่มนั้นเป็นเพียงพื้นฐานส่วนที่เล็กมาก ๆ ซึ่งยังขาดรายละเอียดต่าง ๆ ไปพอสมควร  และด้วยความรู้เท่านั้น รับรองว่าไปลงแรงค์โดนด่าเหมือนรูปด้านบนแน่นอนครับ ฮ่า ๆ  เหตุผลที่เขียนคู่มือเกม RoV อันนี้ขึ้นมาก็เพราะบทความหรือคลิปอื่น ๆ ที่มีอยู่ในอินเทอร์เน็ตนั้นก็ยังไม่ได้ครอบคลุมถึงเนื้อหาล่าสุด  และทาง RoV เองก็ไม่ได้มีหนังสือคู่มือตีพิมพ์ออกมาอย่างจริงจัง ทำให้ไม่ตอบโจทย์ของผู้เล่น RoV ครั้งแรกเท่าไรนัก เนื่องจากข้อมูลมันเก่าเกินไปแล้ว  ผมเลยตัดสินใจเขียนคู่มือนี้ขึ้นมา โดยจะทำการอัปเดตให้ข้อมูลล่าสุดเรื่อย ๆ ให้ผู้เล่นใหม่ ๆ ได้อ่านกัน  ส่วนใหญ่แล้วผู้เล่นหน้าใหม่ที่เข้ามาเล่นเกม RoV นั้นไม่เคยเล่นเกมแนว Moba มาก่อนเลยอาจทำให้มีคำถามในใจมากมาย โดยหลังจากที่อ่านคู่มือ RoV ฉบับสมบูรณ์ นี้แล้วคุณจะรู้ว่า พื้นฐาน RoV เบื้องต้น ก่อนที่จะเล่นเกมอะไรก็ตามไม่ใช่แค่ RoV เราก็จำเป็นที่จะต้องรู้พื้นฐานซะก่อน ไม่งั้นจะต่อยอดได้ยากมาก ซึ่งในเกม RoV นั้นไม่ได้มีสูตรตายตัว แต่มีพื้นฐานหลัก ๆ อยู่ทั้งหมด 8 เรื่องคือ:  ในเกมมีตำแหน่งอะไรบ้าง? เกม RoV เป็นเกมต่อสู้แบบ 5v5 ซึ่งแต่ละคนในทีมก็จะมีตำแหน่งกันออกไป เพื่อการสร้างกลยุทธ์ที่แข็งแกร่งมาสนับสนุนกันและกัน โดยมีตำแหน่งหลัก ๆ ดังนี้:</string>
    <string name="tv_title5">แครี่: เป็นตัวละครมีดาเมจที่รุนแรงแต่จำเป็นต้องใช้ไอเทมหลายชิ้น โดยส่วนมากโจมตีเป็นกายภาพ และมีพลังชีวิตไม่ค่อยมากนัก ถูกสังหารได้ง่าย มักตกเป็นเป้าของแอสซาซิน หน้าที่หลักของแครี่คือการทำดาเมจให้เยอะและไวที่สุด โดยส่วนมากจะเป็นตัวละครประเภทโจมตีไกล</string>
    <string name="tv_title6">แทงค์: เป็นตัวละครที่มีดาเมจน้อย แต่มีความโดดเด่นในความอึด รวมทั้งมี CC ในการทำจังหวะให้เพื่อน แทงค์มีความสามารถในการทำดาเมจทั้งกายภาพและเวทมนต์ หน้าที่หลักของเขาคือสร้างเพื้นที่ให้กับเพื่อนร่วมทีมสามารถทำสิ่งต่าง ๆ ได้ง่ายขึ้น โดยส่วนมากเป็นตัวละครประเภทโจมตีใกล้</string>
    <string name="tv_text8">ไฟท์เตอร์: เป็นตัวละครที่มีทั้งความอึดและความสามารถในการทำดาเมจระดับหนึ่ง รวมทั้งมี CC ติดตัวด้วย ถึงแม้จะดูทำได้ทุกอย่าง แต่ตัวละครประเภทนี้มักจะอยู่ตรงกลางไปไม่สุดซักทาง หน้าที่หลักของไฟท์เตอร์คือการเติมเต็มทีม</string>
    <string name="tv_buyhero">BUY HERO</string>

</resources>
