<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"  >

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RankFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/home_inrank_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HOME"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.967" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="295dp"
                android:layout_height="69dp"
                android:layout_marginStart="58dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="58dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="154dp"
                android:layout_height="34dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:background="@android:drawable/button_onoff_indicator_off"
                android:hint="@string/input_tv"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:text="@string/bt_kid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="29dp"
                android:layout_marginEnd="229dp"
                android:text="@string/tv_duscount"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="86dp"
                android:layout_height="28dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="29dp"
                android:text="@string/tv_pray"
                android:textColor="@android:color/holo_green_light"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="121dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="71dp"
                android:text="@string/tv_bath"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="62dp"
                android:layout_marginEnd="84dp"
                android:text="0"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>
